--- a/wiki.mediawiki
+++ b/wiki.mediawiki
@@ -6,11 +6,14 @@
 *** [[wiki/math/sim|simulated_math(sim)]]
 **** [[wiki/math/sim#dec|Decimals]]
 **** [[wiki/math/sim#frc|Fraction Numbers]]
+**** [[wiki/math/sim#log|Logarithm Numbers]]
+**** [[wiki/math/sim#sin|Trigonometric Functions]]
 ** [[wiki/ext|ext]]
 *** [[wiki/ext/map|map]]
 *** [[wiki/ext/fes|filtered_element_selector(fes)]]
 *** [[wiki/ext/array|array]]
 *** [[wiki/ext/pdc|pre-defined_constants]]
+*** [[wiki/ext/sqp|string_quick_parse(sqp)]]
 ** [[wiki/stat|stat]]
 *** [[wiki/stat/ess|extended_spreadsheet(ess)]]
 *** [[wiki/stat/dbs|database_spreadsheet(dbs)]]
